2010-04-25  James Youngman  <jay@gnu.org>

	Use valgrind for y2k tests.
	* tests/year-2000/ext.sh: Use valgrind.
	* tests/year-2000/prs-y2k.sh: Likewise.

	Use valgrind for what tests.
	* tests/what/whatbasic.sh: Use valgrind.

	Use valgrind for val tests.
	* tests/val/valbasic.sh: Use valgrind.
	* tests/val/y2k.sh: Likewise.

	Use valgrind for unget tests.
	* tests/unget/exists.sh: Use valgrind.
	* tests/unget/output.sh: Likewise.

	Use valgrind for sact tests.
	* tests/sact/sactbasic.sh: Use valgrind.
	* tests/sact/sf513800.sh: Likewise.

	Use valgrind for rmdel tests.
	* tests/rmdel/basic.sh: Use valgrind.
	* tests/rmdel/exists.sh: Likewise.
	* tests/rmdel/edit.sh: Likewise.

	Use valgrind for prt tests.
	* tests/prt/default.sh: Use valgrind.
	* tests/prt/nodel.sh: Likewise.
	* tests/prt/exists.sh: Likewise.
	* tests/prt/reportmr.sh: Likewise.n

	Use valgrind for prs tests.
	* tests/prs/keywords.sh: Use valgrind.
	* tests/prs/format.sh: Likewise.
	* tests/prs/exists.sh: Likewise.
	* tests/prs/body.sh: Likewise.

	Use valgrind for large tests.
	* tests/large/admin.sh: Use valgrind.

	Use valgrind for get tests.
	* tests/get/annotate.sh: Use valgrind.
	* tests/get/a-option.sh: Likewise.
	* tests/get/branch.sh: Likewise.
	* tests/get/create.sh: Likewise.
	* tests/get/defsid.sh: Likewise.
	* tests/get/delta-summary.sh: Likewise.
	* tests/get/errorcases.sh: Likewise.
	* tests/get/excl_ig_1.sh: Likewise.
	* tests/get/excl_ig_2.sh: Likewise.
	* tests/get/gg_get_ix.sh: Likewise.
	* tests/get/included.sh: Likewise.
	* tests/get/middle-fail.sh: Likewise.
	* tests/get/no-sfile.sh: Likewise.
	* tests/get/only-one.sh: Likewise.
	* tests/get/optorder.sh: Likewise.
	* tests/get/removed-delta.sh: Likewise.
	* tests/get/sep_subst.sh: Likewise.
	* tests/get/sf111140.sh: Likewise.
	* tests/get/sf479916.sh: Likewise.
	* tests/get/sf664900.sh: Likewise.
	* tests/get/sf865422.sh: Likewise.
	* tests/get/sid-select.sh: Likewise.
	* tests/get/sid-select2.sh: Likewise.